Update Java code to follow new protocol